@@ -26,7 +26,7 @@ import org.junit.jupiter.api.Test;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 class FileSystemLoaderTest {
 
@@ -40,11 +40,11 @@ class FileSystemLoaderTest {
 
     private static final String EXISTING_EXTERNAL_DIRECTORY = "external:/src";
 
-    private static final String EXISTING_FILE_PATH = Paths.get(EXISTING_FILE).toAbsolutePath().toString();
+    private static final String EXISTING_FILE_PATH = Path.of(EXISTING_FILE).toAbsolutePath().toString();
 
-    private static final String EXISTING_DIRECTORY_PATH = Paths.get(EXISTING_DIRECTORY).toAbsolutePath().toString();
+    private static final String EXISTING_DIRECTORY_PATH = Path.of(EXISTING_DIRECTORY).toAbsolutePath().toString();
 
-    private static final String NOT_EXISTING_FILE_PATH = Paths.get(NOT_EXISTING_FILE).toAbsolutePath().toString();
+    private static final String NOT_EXISTING_FILE_PATH = Path.of(NOT_EXISTING_FILE).toAbsolutePath().toString();
 
     @Test
     void shouldHandleExistingFile() throws IOException {
@@ -57,7 +57,7 @@ class FileSystemLoaderTest {
 
     @Test
     void shouldHandlePathAsArgument() throws IOException {
-        final var loader = new FileSystemLoader(Paths.get(EXISTING_FILE_PATH));
+        final var loader = new FileSystemLoader(Path.of(EXISTING_FILE_PATH));
         assertTrue(loader.isReadable());
         assertTrue(loader.isFilesystemLoader());
         assertEquals(EXISTING_FILE, loader.getFileName().getOriginalName());
@@ -158,7 +158,7 @@ class FileSystemLoaderTest {
         var loader = new FileSystemLoader(EXISTING_FILE_PATH);
         var url = loader.getURL();
         assertNotNull(url);
-        assertEquals(Paths.get(EXISTING_FILE_PATH).toUri().toURL(), url);
+        assertEquals(Path.of(EXISTING_FILE_PATH).toUri().toURL(), url);
     }
 
     @Test
@@ -166,6 +166,6 @@ class FileSystemLoaderTest {
         var loader = new FileSystemLoader(NOT_EXISTING_FILE_PATH);
         var url = loader.getURL();
         assertNotNull(url);
-        assertEquals(Paths.get(NOT_EXISTING_FILE_PATH).toUri().toURL().getPath(), url.getPath());
+        assertEquals(Path.of(NOT_EXISTING_FILE_PATH).toUri().toURL().getPath(), url.getPath());
     }
 }
